# ai-multimodal-product-intelligence

./: .env.example  .gitignore  Dockerfile  INTEGRATION.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: baseline_gpt4o.yaml  classifier.yaml  evaluation.yaml  inference.yaml  qlora_llava_7b.yaml  qlora_multimodal.yaml  qlora_text_only.yaml  qlora_vague_multimodal.yaml  search.yaml
data/processed/: attribute_stats.json  dataset_card.json  test.jsonl  test_multimodal.jsonl  test_vague.jsonl  train_multimodal.jsonl  train_vague.jsonl  val.jsonl  val_multimodal.jsonl  val_vague.jsonl
demo/: app.py
docs/: METHODOLOGY.md
notebooks/: 01_eda_wands.ipynb
scripts/: analyze_wands_distribution.py  build_class_vocab.py  build_multimodal_dataset.py  create_adversarial_text.py  create_vague_text.py  download_wands.py  enrich_catalog.py  evaluate.py  evaluate_classifier.py  evaluate_search.py  filter_image_only.py  fix_nan.py  pad_targets.py  patch_image_query.py  precompute_embeddings.py  predict.py  prepare_classifier_data.py  prepare_data.py  prepare_search_data.py  preview_queries.py  run_baseline_gpt4o.py  run_inference.py  run_inference_hf.py  run_inference_vllm.py  source_images.py  source_wayfair_images.py  train.py  train_classifier.py  train_search.py
src/: __init__.py
src/classifier/: __init__.py  attention_pooler.py  attribute_encoder.py  attribute_head.py  config.py  dataset.py  fusion.py  gated_head.py  hierarchy_head.py  image_encoder.py  mismatch_detector.py  model.py  (+6 more)
tests/: test_feature_parser.py  test_metrics.py  test_postprocessor.py
(+38 files in other folders)
